--- a/calc/src/main/delphi/Calculator.dproj
+++ b/calc/src/main/delphi/Calculator.dproj
@@ -143,6 +143,7 @@
         <DCCReference Include="Token.pas"/>
         <DCCReference Include="Postfixer.pas"/>
         <DCCReference Include="Calculator.Types.pas"/>
+        <DCCReference Include="Tokenizer.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
