--- a/calc/src/main/delphi/Projects/Calculator.dproj
+++ b/calc/src/main/delphi/Projects/Calculator.dproj
@@ -107,6 +107,7 @@
         <DCCReference Include="Stack.pas"/>
         <DCCReference Include="Token.pas"/>
         <DCCReference Include="Tokenizer.pas"/>
+        <DCCReference Include="DebugPrinter.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
