--- a/ScriptExecutor/ScriptExecutor.dproj
+++ b/ScriptExecutor/ScriptExecutor.dproj
@@ -102,11 +102,11 @@
         <DCCReference Include="Main.FormView.pas">
             <Form>MainForm</Form>
         </DCCReference>
-        <DCCReference Include="ScriptException.pas"/>
         <DCCReference Include="DebugPrinter.pas"/>
         <DCCReference Include="Identifier.pas"/>
         <DCCReference Include="SyntaxValidator.pas"/>
         <DCCReference Include="Tokenizer.pas"/>
+        <DCCReference Include="Token.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
