--- a/ScriptExecutor/ScriptExecutor.dproj
+++ b/ScriptExecutor/ScriptExecutor.dproj
@@ -104,8 +104,10 @@
         </DCCReference>
         <DCCReference Include="DebugPrinter.pas"/>
         <DCCReference Include="SyntaxValidator.pas"/>
-        <DCCReference Include="Tokenizer.pas"/>
         <DCCReference Include="Token.pas"/>
+        <DCCReference Include="Tokenizer.pas"/>
+        <DCCReference Include="TokenBuilder.pas"/>
+        <DCCReference Include="TokenState.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
